<resources>
    <string name="app_name">玩安卓</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="network_connection_failed">网络连接失败</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="network_request_timeout">网络请求超时</string>
    <string name="api_data_parse_error">数据解析错误</string>
    <string name="loading">正在加载中...</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="account_not_empty">账号不能为空</string>
    <string name="psw_not_empty">密码不能为空</string>
    <string name="doing_login">正在登录</string>
    <string name="account_limit_three">账号不能少于三位</string>
    <string name="psw_limit_six">密码不能少于6位</string>
    <string name="confirm_psw_not_empty">确认密码不能为空</string>
    <string name="psw_not_match">两次输入的密码不一致</string>
    <string name="doing_register">正在注册</string>
    <string name="home">首页</string>
    <string name="system">体系</string>
    <string name="discovery">发现</string>
    <string name="navigation">导航</string>
    <string name="mine">我的</string>
    <string name="click_onece_exit">再按一次退出</string>
    <string name="search_key">搜索关键字以空格隔开</string>
    <string name="hot">热门</string>
    <string name="latest">最近</string>
    <string name="square">广场</string>
    <string name="project">项目</string>
    <string name="wechat">公众号</string>
    <string name="not_network">网络开小差了~</string>
    <string name="reload">重新加载</string>
    <string name="anonymous">匿名</string>
    <string name="is_top">顶置</string>
    <string name="new_article">新</string>
    <string name="add_collect">加入收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="share">分享</string>
    <string name="open_explore">浏览器打开</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="my_collect">我的收藏</string>
    <string name="system_setting">系统设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="out_login">退出登录</string>
    <string name="sure_out_login">确定退出登录？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="psw_lock">密码锁</string>

</resources>