<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_collect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:paddingLeft="@dimen/space16">

        <ImageView
            android:id="@+id/iv_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tint="@color/color_0a5273"
            android:src="@drawable/selector_collect" />

        <TextView
            android:id="@+id/tv_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/space10"
            android:text="@string/add_collect"
            android:textColor="@color/color_0a5273"
            android:textSize="@dimen/font14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:background="@color/color_e3e5e7" />
    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:paddingLeft="@dimen/space16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_share_24" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/space10"
            android:text="@string/share"
            android:textColor="@color/color_0a5273"
            android:textSize="@dimen/font14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:background="@color/color_e3e5e7" />
    <LinearLayout
        android:id="@+id/ll_browse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:paddingLeft="@dimen/space16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_explore_24" />

        <TextView
            android:id="@+id/tv_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/space10"
            android:text="@string/open_explore"
            android:textColor="@color/color_0a5273"
            android:textSize="@dimen/font14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space1"
        android:background="@color/color_e3e5e7" />
    <LinearLayout
        android:id="@+id/ll_copy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:paddingLeft="@dimen/space16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_file_copy_24" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/space10"
            android:text="@string/copy_link"
            android:textColor="@color/color_0a5273"
            android:textSize="@dimen/font14" />
    </LinearLayout>
</LinearLayout>
