<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eeeeee"
    tools:context=".ui.setting.SettingActivity">

    <com.example.mykotlin.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
       />

    <RelativeLayout
        android:id="@+id/rl_mode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:layout_marginTop="@dimen/space8"
        android:background="@color/color_ffffff"
        android:paddingLeft="@dimen/space12"
        android:paddingRight="@dimen/space12"
        app:layout_constraintTop_toBottomOf="@+id/titleView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/night_mode"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/font14" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/view_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_lock"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:layout_marginTop="@dimen/space1"
        android:background="@color/color_ffffff"
        android:elevation="@dimen/space2"
        android:paddingLeft="@dimen/space12"
        android:paddingRight="@dimen/space12"
        app:layout_constraintTop_toBottomOf="@+id/rl_mode">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/psw_lock"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/font14" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_out_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:layout_marginTop="@dimen/space8"
        android:background="@color/color_ffffff"
        android:gravity="center"
        android:text="@string/out_login"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/font14"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/rl_lock" />

</androidx.constraintlayout.widget.ConstraintLayout>