<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f3f5f7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space48"
        android:background="@color/color_ffffff"
        android:elevation="@dimen/space2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mine"
            android:textColor="@color/color_000000"
            android:textSize="@dimen/font18" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:layout_marginTop="@dimen/space8"
                android:padding="@dimen/space12">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="@dimen/space60"
                    android:layout_height="@dimen/space60"
                    android:src="@drawable/ic_avatar_black_96dp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/iv_photo"
                    android:layout_marginLeft="@dimen/space10"
                    android:layout_toRightOf="@+id/iv_photo"
                    android:text="180000000"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/font16"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/iv_photo"
                    android:layout_marginLeft="@dimen/space10"
                    android:layout_toRightOf="@+id/iv_photo"
                    android:text="ID:8888"
                    android:textColor="@color/color_979797"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/space15"
                    android:layout_toRightOf="@+id/iv_photo"
                    android:text="登录/注册"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/font18" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space48"
                android:background="@color/color_ffffff"
                android:paddingLeft="@dimen/space15"
                android:layout_marginTop="@dimen/space8"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_collect"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/font14"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:drawablePadding="@dimen/space10"
                    android:drawableTint="@color/color_0a5273"
                    android:drawableLeft="@drawable/ic_star_border_black_24dp"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space0_5"
                android:background="@color/color_e6e6e6"
                android:layout_alignParentBottom="true"
                />
            <RelativeLayout
                android:id="@+id/rl_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space48"
                android:background="@color/color_ffffff"
                android:paddingLeft="@dimen/space15"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_setting"
                    android:textColor="@color/color_000000"
                    android:textSize="@dimen/font14"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:drawablePadding="@dimen/space10"
                    android:drawableLeft="@drawable/ic_settings_24"
                    />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
